Достилизовал мобильную версию главной страницы до блока Живой пример

--- a/source/form.html
+++ b/source/form.html
@@ -162,12 +162,12 @@
   </main>
 
   <footer class="page-footer">
-    <div class="contacts container">
+    <div class="contacts">
       <div class="contacts__text-box">
-        <p class="contacts__greeting">
+        <p class="contacts__half contacts__greeting">
           Приглашаем к сотрудничеству дилеров!
         </p>
-        <p class="contacts__address">
+        <p class="contacts__half contacts__address">
           ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
         </p>
       </div>
