--- a/source/index.html
+++ b/source/index.html
@@ -53,7 +53,7 @@
   <main class="theme">
     <h1 class="visually-hidden">Cat Energy</h1>
     <section class="intro">
-      <div class="container">
+      <div class="intro__wrapper container">
         <h2 class="intro__title theme__title">
           Функциональное питание для котов
         </h2>
@@ -72,7 +72,7 @@
         </a>
         <article class="programs__item program">
           <h3 class="program__title">
-            <span class="program__icon"></span>
+            <span class="program__icon program__icon--slim"></span>
             Похудение
           </h3>
           <p class="program__description theme__text">
@@ -82,7 +82,7 @@
         </article>
         <article class="programs__item program">
           <h3 class="program__title">
-            <span class="program__icon"></span>
+            <span class="program__icon program__icon--pro"></span>
             Набор массы
           </h3>
           <p class="program__description theme__text">
@@ -98,7 +98,7 @@
         <h2 class="theme__title">Как это работает</h2>
         <ul class="features__list">
           <li class="features__item feature">
-            <div class="feature__icon feature__icon--sleeve"></div>
+            <div class="feature__icon feature__icon--leaf"></div>
             <p class="feature__text theme__text">
               Функциональное питание содержит только полезные питательные вещества.
             </p>
@@ -110,13 +110,13 @@
             </p>
           </li>
           <li class="features__item feature">
-            <div class="feature__icon feature__icon--flatware"></div>
+            <div class="feature__icon feature__icon--dining"></div>
             <p class="feature__text theme__text">
               Замените один-два приема обычной еды на наше функциональное питание.
             </p>
           </li>
           <li class="features__item feature">
-            <div class="feature__icon feature__icon--clocks"></div>
+            <div class="feature__icon feature__icon--clock"></div>
             <p class="feature__text theme__text">
               Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
             </p>
@@ -159,16 +159,16 @@
   </main>
 
   <footer class="page-footer">
-    <div class="contacts container">
+    <div class="contacts">
       <div class="contacts__text-box contacts__text-box--white">
-        <p class="contacts__greeting">
-          Приглашаем к сотрудничеству дилеров!
+        <p class="contacts__half contacts__greeting">
+          Приглашаем <br> к сотрудничеству дилеров!
         </p>
-        <p class="contacts__address">
-          ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+        <p class="contacts__half contacts__address">
+          ул. Большая <br> Конюшенная, д. 19/8 Санкт-Петербург
         </p>
       </div>
-      <div class="contacts__map full-width"></div>
+      <div class="contacts__map"></div>
     </div>
 
     <div class="container">
