--- a/source/form.html
+++ b/source/form.html
@@ -175,7 +175,7 @@
     </div>
 
     <div class="container">
-      <div class="page-footer__item page-logo">
+      <div class="page-footer__item page-logo page-logo--footer">
         <a href="index.html" class="page-logo__title">
           <img src="img/logo-footer.svg" alt="Cat Energy" width="128" height="24">
         </a>
