--- a/source/form.html
+++ b/source/form.html
@@ -57,8 +57,8 @@
       <p class="program-form__text">
         Заполните анкету и мы подберем программу питания для вашего кота
       </p>
-      <fieldset class="program-form__group form-unit">
-        <legend class="form-unit__title visually-hidden">Личные данные кота</legend>
+      <section class="program-form__group form-unit">
+        <!--<legend class="form-unit__title visually-hidden">Личные данные кота</legend>-->
         <p class="form-unit__row">
           <label class="form-unit__item">
             <span class="form-unit__label">Имя:*</span>
@@ -68,18 +68,18 @@
         <p class="form-unit__row">
           <label class="form-unit__item">
             <span class="form-unit__label">Вес (кг):*</span>
-            <input type="number" class="form-unit__input" name="Вес" placeholder="7" required>
+            <input type="text" class="form-unit__input" name="Вес" placeholder="7" required>
           </label>
         </p>
         <p class="form-unit__row">
           <label class="form-unit__item">
             <span class="form-unit__label">Возраст (лет):</span>
-            <input type="number" class="form-unit__input" name="Возраст" placeholder="7">
+            <input type="text" class="form-unit__input" name="Возраст" placeholder="7">
           </label>
         </p>
-      </fieldset>
-      <fieldset class="program-form__group form-unit form-unit--separated">
-        <legend class="form-unit__title visually-hidden">Выбор программы</legend>
+      </section>
+      <section class="program-form__group form-unit form-unit--separated">
+        <h3 class="form-unit__title visually-hidden">Выбор программы</h3>
         <ul class="form-unit__list">
           <li class="form-unit__list-item">
             <label class="form-unit__item">
@@ -100,35 +100,35 @@
             </label>
           </li>
         </ul>
-      </fieldset>
-      <fieldset class="program-form__group form-unit">
-        <legend class="form-unit__title theme__subtitle">Контактные данные (владельца кота)</legend>
+      </section>
+      <section class="program-form__group form-unit">
+        <h3 class="form-unit__title theme__subtitle"><span>Контактные данные (владельца кота)</span></h3>
         <p class="form-unit__row">
           <label class="form-unit__item">
             <span class="form-unit__label">E-mail:*</span>
             <input type="email" class="form-unit__input form-unit__input--icon
-            form-unit__input--email" name="E-mail" placeholder="kuklachev@gmail.com" required>
+          form-unit__input--email" name="E-mail" placeholder="kuklachev@gmail.com" required>
           </label>
         </p>
         <p class="form-unit__row">
           <label class="form-unit__item">
             <span class="form-unit__label">Телефон:*</span>
             <input type="text" class="form-unit__input form-unit__input--icon
-            form-unit__input--phone" name="Телефон" placeholder="8 (960) 900-60-90" required>
+          form-unit__input--phone" name="Телефон" placeholder="8 (960) 900-60-90" required>
           </label>
         </p>
-      </fieldset>
-      <fieldset class="program-form__group form-unit">
-        <legend class="form-unit__title theme__subtitle">Комментарий</legend>
+      </section>
+      <section class="program-form__group form-unit">
+        <h3 class="form-unit__title theme__subtitle"><span>Комментарий</span></h3>
         <p class="form-unit__row">
           <label class="form-unit__item">
-            <textarea class="form-unit__textarea" name="Комментарий"
-                      cols="33" rows="4" placeholder="Расскажите обо всех повадках кота"></textarea>
+          <textarea class="form-unit__textarea" name="Комментарий"
+                    cols="28" rows="4" placeholder="Расскажите обо всех повадках кота"></textarea>
           </label>
         </p>
-      </fieldset>
-      <fieldset class="program-form__group form-unit">
-        <legend class="form-unit__title theme__subtitle">Дополнительно</legend>
+      </section>
+      <section class="program-form__group form-unit">
+        <h3 class="form-unit__title"><b class="theme__subtitle"><span>Дополнительно</span></b></h3>
         <ul class="form-unit__list">
           <li class="form-unit__list-item">
             <label class="form-unit__item">
@@ -155,7 +155,7 @@
             </label>
           </li>
         </ul>
-      </fieldset>
+      </section>
       <button class="theme__btn">Отправить заявку</button>
       <p class="program-form__footnote theme__text"><sup>*</sup> — Обязательные поля</p>
     </form>
@@ -165,10 +165,10 @@
     <div class="contacts">
       <div class="contacts__text-box">
         <p class="contacts__half contacts__greeting">
-          Приглашаем к сотрудничеству дилеров!
+          Приглашаем <br> к сотрудничеству дилеров!
         </p>
         <p class="contacts__half contacts__address">
-          ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+          ул. Большая <br> Конюшенная, д. 19/8 Санкт-Петербург
         </p>
       </div>
       <div class="contacts__map"></div>
