--- a/source/index.html
+++ b/source/index.html
@@ -61,16 +61,16 @@
           Занялся собой? Займись котом!
         </p>
         <img class="intro__image" src="img/index-can-mobile@1x.png" alt="Внешний вид товара" width="280" height="270">
-        <a class="theme__btn" href="form.html">
+        <a class="intro__btn theme__btn" href="form.html">
           Подобрать программу
         </a>
       </div>
     </section>
 
-    <section class="programs">
+    <section class="program">
       <h2 class="visually-hidden">Программы тренировок</h2>
       <div class="container">
-        <article class="programs__item program">
+        <article class="program__item">
           <h3 class="program__title">
             <span class="program__icon program__icon--slim"></span>
             Похудение
@@ -80,7 +80,7 @@
           </p>
           <a href="catalog.html" class="program__link">Каталог Slim</a>
         </article>
-        <article class="programs__item program">
+        <article class="program__item">
           <h3 class="program__title">
             <span class="program__icon program__icon--pro"></span>
             Набор массы
@@ -93,30 +93,26 @@
       </div>
     </section>
 
-    <section class="features">
+    <section class="feature">
       <div class="container">
         <h2 class="theme__title">Как это работает</h2>
-        <ul class="features__list">
-          <li class="features__item feature">
-            <div class="feature__icon feature__icon--leaf"></div>
+        <ul class="feature__list">
+          <li class="feature__item feature__item--leaf">
             <p class="feature__text theme__text">
               Функциональное питание содержит только полезные питательные вещества.
             </p>
           </li>
-          <li class="features__item feature">
-            <div class="feature__icon feature__icon--powder"></div>
+          <li class="feature__item feature__item--powder">
             <p class="feature__text theme__text">
               Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
             </p>
           </li>
-          <li class="features__item feature">
-            <div class="feature__icon feature__icon--dining"></div>
+          <li class="feature__item feature__item--dining">
             <p class="feature__text theme__text">
               Замените один-два приема обычной еды на наше функциональное питание.
             </p>
           </li>
-          <li class="features__item feature">
-            <div class="feature__icon feature__icon--clock"></div>
+          <li class="feature__item feature__item--clock">
             <p class="feature__text theme__text">
               Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
             </p>
